--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -380,4 +380,11 @@ footer .copyright {
     max-width: 1000px;
     margin: 0 auto;
     padding: 0 20px;
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
+}
+
+.malnet-title h1 {
+    font-weight: 300;
+    font-size: 2.5em;
 }
