--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -391,12 +391,21 @@ footer .copyright {
 }
 
 .showcase:before {
-    background-color: yellow;
+    box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);
     display: block;
     height: 20px;
     width: 100%;
     content: ' ';
     z-index: 2;
     position: relative;
-    top: 20px;
+}
+
+.showcase:after {
+    box-shadow: 0px -10px 16px rgba(0, 0, 0, 0.5);
+    display: block;
+    height: 20px;
+    width: 100%;
+    content: ' ';
+    z-index: 2;
+    position: relative;
 }
