--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -395,8 +395,17 @@ footer .copyright {
     box-shadow: 0px -10px 16px rgba(0, 0, 0, 0.5);
     display: block;
     height: 20px;
-    width: 100%;
     content: ' ';
     z-index: 2;
     position: relative;
 }
+
+.showcase:before {
+    box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);
+    display: block;
+    height: 20px;
+    content: ' ';
+    z-index: 2;
+    position: relative;
+}
+
