--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -392,20 +392,22 @@ footer .copyright {
 
 
 .showcase:after {
-    box-shadow: 0px -10px 16px rgba(0, 0, 0, 0.5);
+    /*box-shadow: 0px -10px 16px rgba(0, 0, 0, 0.5);*/
     display: block;
     height: 20px;
     content: ' ';
     z-index: 2;
+    background-color: red;
     position: relative;
 }
 
 .showcase:before {
-    box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);
+    /*box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);*/
     display: block;
     height: 20px;
     content: ' ';
     z-index: 2;
+    background-color: red;
     position: relative;
 }
 
