--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -387,23 +387,21 @@ footer .copyright {
     font-size: 2.5em;
 }
 
-
-.showcase:after {
-    /*box-shadow: 0px -10px 16px rgba(0, 0, 0, 0.5);*/
+.showcase:before {
+    box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);
     display: block;
     height: 20px;
     content: ' ';
     z-index: 2;
-    background-color: red;
     position: relative;
 }
 
-.showcase:before {
-    /*box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);*/
+.showcase:after {
+    box-shadow: 0px -10px 16px rgba(0, 0, 0, 0.5);
     display: block;
     height: 20px;
     content: ' ';
     z-index: 2;
-    background-color: red;
     position: relative;
+    top: -20px;
 }
