--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -90,7 +90,6 @@ img::-moz-selection {
 
 #mainNav .navbar-brand {
     font-weight: 800;
-    color:#343a40
 }
 
 #mainNav .navbar-toggler {
@@ -98,7 +97,7 @@ img::-moz-selection {
     font-weight: 800;
     padding: 13px;
     text-transform: uppercase;
-    color:#343a40
+    color: white;
 }
 
 #mainNav .navbar-nav > li.nav-item > a {
