--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -84,12 +84,12 @@ img::-moz-selection {
 #mainNav {
     position: sticky;
     background-color: black;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    height: 8vh;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 }
 
 #mainNav .navbar-brand {
     font-weight: 800;
+    color:#343a40
 }
 
 #mainNav .navbar-toggler {
@@ -97,7 +97,7 @@ img::-moz-selection {
     font-weight: 800;
     padding: 13px;
     text-transform: uppercase;
-    color: white;
+    color:#343a40
 }
 
 #mainNav .navbar-nav > li.nav-item > a {
@@ -115,8 +115,7 @@ header.masthead {
     background-color: #868e96;
     background-attachment: scroll;
     position: relative;
-    background-size:cover;
-    height: 92vh;
+    background-size:cover
 }
 
 header.masthead .overlay {
@@ -340,65 +339,3 @@ footer .copyright {
     padding: 25px 35px
 }
 
-.showcase {
-    width: 100%;
-    height: 340px;
-    overflow: hidden;
-    margin: 0 auto;
-    padding: 0;
-    position: relative;
-}
-
-.showcase .examples {
-    margin: 0 auto;
-    height: 300px;
-    width: 1300px;
-    line-height: 0;
-}
-
-.preview {
-    display: block;
-    float: left;
-    width: 216px;
-    height: 100px;
-    outline: 1px solid #ddd;
-    overflow: hidden;
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    transition: background-position 2s;
-}
-
-.preview:hover {
-    background-position: 0 100%;
-}
-
-.malnet-title {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 20px;
-    margin-top: 1em;
-}
-
-.malnet-title h1 {
-    font-weight: 300;
-    font-size: 2.5em;
-}
-
-.showcase:before {
-    box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);
-    display: block;
-    height: 20px;
-    content: ' ';
-    z-index: 2;
-    position: relative;
-}
-
-.showcase:after {
-    box-shadow: 0px -10px 16px rgba(0, 0, 0, 0.5);
-    display: block;
-    height: 20px;
-    content: ' ';
-    z-index: 2;
-    position: relative;
-}
