--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -84,12 +84,12 @@ img::-moz-selection {
 #mainNav {
     position: sticky;
     background-color: black;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    height: 8vh;
 }
 
 #mainNav .navbar-brand {
     font-weight: 800;
-    color:#343a40
 }
 
 #mainNav .navbar-toggler {
@@ -97,7 +97,7 @@ img::-moz-selection {
     font-weight: 800;
     padding: 13px;
     text-transform: uppercase;
-    color:#343a40
+    color: white;
 }
 
 #mainNav .navbar-nav > li.nav-item > a {
@@ -115,7 +115,8 @@ header.masthead {
     background-color: #868e96;
     background-attachment: scroll;
     position: relative;
-    background-size:cover
+    background-size:cover;
+    height: 92vh;
 }
 
 header.masthead .overlay {
@@ -338,4 +339,3 @@ footer .copyright {
     font-size: 16px;
     padding: 25px 35px
 }
-
