--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -339,3 +339,66 @@ footer .copyright {
     font-size: 16px;
     padding: 25px 35px
 }
+
+.showcase {
+    width: 100%;
+    height: 340px;
+    overflow: hidden;
+    margin: 0 auto;
+    padding: 0;
+    position: relative;
+}
+
+.showcase .examples {
+    margin: 0 auto;
+    height: 300px;
+    width: 1300px;
+    line-height: 0;
+}
+
+.preview {
+    display: block;
+    float: left;
+    width: 216px;
+    height: 100px;
+    outline: 1px solid #ddd;
+    overflow: hidden;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: background-position 2s;
+}
+
+.preview:hover {
+    background-position: 0 100%;
+}
+
+.malnet-title {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 20px;
+    margin-top: 1em;
+}
+
+.malnet-title h1 {
+    font-weight: 300;
+    font-size: 2.5em;
+}
+
+.showcase:before {
+    box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);
+    display: block;
+    height: 20px;
+    content: ' ';
+    z-index: 2;
+    position: relative;
+}
+
+.showcase:after {
+    box-shadow: 0px -10px 16px rgba(0, 0, 0, 0.5);
+    display: block;
+    height: 20px;
+    content: ' ';
+    z-index: 2;
+    position: relative;
+}
