--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -406,3 +406,17 @@ footer .copyright {
     z-index: 2;
     position: relative;
 }
+
+@media (min-width: 992px)
+.col-lg-8 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+@media (min-width: 768px)
+.col-md-10 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
