--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -408,14 +408,14 @@ footer .copyright {
 }
 
 @media (min-width: 992px)
-.col-lg-8 {
+.new-col-lg-8 {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
 }
 
 @media (min-width: 768px)
-.col-md-10 {
+.new-col-md-10 {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
