--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -420,3 +420,26 @@ footer .copyright {
     flex: 0 0 100%;
     max-width: 100%;
 }
+
+.publication-card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.publication-card {
+  width: 33%;
+  box-sizing: border-box;
+  margin-bottom:20px;
+  padding-right:10px;
+  padding-left:30px;
+}
+
+@media screen and (max-width: 500px) {
+    .publication-card-container {
+        flex-direction: column;
+    }
+    
+    .publication-card {
+        width: 100%;
+    }
+}
