--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -440,9 +440,15 @@ footer .copyright {
 }
 
 .card-info {
-  width: 100%;
-  margin-right:15px;
-  margin-left:15px;
+  margin-right: 15px;
+    margin-left: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.card-info:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 @media screen and (max-width: 500px) {
